# expedait-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  publish.yml
expedait_cli/: __init__.py  auth.py  client.py  config.py  formatters.py  main.py  ops.py  settings.py
expedait_cli/commands/: auth_cmd.py  comments.py  context_cmd.py  deliverables.py  init_cmd.py  objectives.py  pages.py  processes.py  projects.py  review.py  roles.py
tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_settings.py
tests/test_commands/: test_auth_cmd.py  test_comments.py  test_context.py  test_context_files.py  test_deliverables.py  test_deliverables_write.py  test_init_cmd.py  test_objectives.py  test_pages.py  test_processes.py  test_projects.py  test_review.py  test_roles.py
