[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expedait-cli"
version = "0.2.2"
description = "CLI for Expedait project management — download specs, post comments"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
expedait = "expedait_cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
