[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expedait-cli"
version = "0.4.0"
description = "CLI for Expedait project management — read and write deliverables, processes, roles, and comments"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
expedait = "expedait_cli.main:cli"
# Alias so `uvx expedait-cli ...` keeps working (package name == script name).
expedait-cli = "expedait_cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
